--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -60,13 +60,13 @@ body{
      
     
 }
-#paintcan{
+/*#paintcan{
     margin-top: 10px;
     width: 100%;
     height: 500px;
     border: 1px solid #245269;
     background-color: #f5f5f5;
-}
+}*/
 #options{
     margin-top: 30px;
     background-color: white;
