--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11,6 +11,20 @@ body{
    
  
 }
+
+.templates-container{
+    border:1px solid black;
+    height:400px;
+}
+
+.template-container{
+    border:1px solid black;
+    display:inline-block;
+    width:120px;
+    height:120px;
+    background-size:100% auto;
+}
+
 .container{
     
     width: 85%;
